==> huarteto/NetBeans/Desktop/Uni segundo/Uni seg/Uni segundo/Alvaro Nuevo/ARM/Boards/Atmel/ATSAM3S-EK/USBHID/usbhw_SAM3S.c <==
#include <SAM3S.H>                                     /* ATSAM3S definitions */
#include "type.h"
#include "usb.h"
#include "usbcfg.h"
#include "usbhw.h"
#include "usbcore.h"
#include "usbuser.h"
#define REG_NO_EFFECT_1_ALL    UDP_CSR_RX_DATA_BK0\
                             | UDP_CSR_RX_DATA_BK1\
                             | UDP_CSR_STALLSENTISOERROR\
                             | UDP_CSR_RXSETUP\
                             | UDP_CSR_TXCOMP

void USB_Init (void) {

  /* Enables the 48MHz USB Clock UDPCK and System Peripheral USB Clock */
                                                       /* PLLB is configured for 96MHz     */
  PMC->PMC_PCER1 = PMC_PCER1_PID34;                    /* enable master clock for UPD      */
  PMC->PMC_USB   = ((0x01 << 8) |                      /* USBDIV = 1  (96MHz / (USBDIV+1)) */ 
                    (0x01 << 0)  );                    /* USB Clock Input is PLLB          */

  UDP->UDP_TXVC &= ~UDP_TXVC_PUON;                     /* disconnect pullup on DP          */

  PMC->PMC_SCER  =  PMC_SCER_UDP;                      /* enable 48MHz clock for UDP       */

  NVIC_EnableIRQ(UDP_IRQn);                            /* enable USB interrupt             */

}

void USB_Connect (BOOL con) {

  if (con) {
    UDP->UDP_TXVC &= ~UDP_TXVC_TXVDIS;                 /*  enable Transciever              */
    UDP->UDP_TXVC |=  UDP_TXVC_PUON;                   /*    connect pullup on DP          */
  } else {
    UDP->UDP_TXVC &= ~UDP_TXVC_PUON;                   /* disconnect pullup on DP          */
    UDP->UDP_TXVC |=  UDP_TXVC_TXVDIS;                 /* disable Transciever              */
  }
}

void USB_Reset (void) {
  U32 ep;

  /* Global USB Reset */
  UDP->UDP_GLB_STAT  =   0;                            /* reset global status to 0         */
  UDP->UDP_FADDR     =   UDP_FADDR_FEN;                /* set address to 0                 */
  UDP->UDP_ICR       =   0xFFFFFFFF;                   /* clear all pending interrupts     */

  /* Reset & Disable USB Endpoints */
  for (ep = 0; ep < USB_EP_NUM; ep++) {
    UDP->UDP_CSR[ep] = 0;
    RxDataBank[ep] = 0;
    TxDataBank[ep] = 0;
  }
  UDP->UDP_RST_EP = 0xFFFFFFFF;
  UDP->UDP_RST_EP = 0;

  /* Setup USB Interrupts */
  UDP->UDP_IER = UDP_IER_RXSUSP | 
                 UDP_IER_RXRSM  | 
                 UDP_IER_EXTRSM |
                 UDP_IER_SOFINT ;

  /* Setup Control Endpoint 0 */
  UDP->UDP_IER = (1 << 0);                             /* enable EP0 interrupts */ 
  USB_SetCSR(0, (UDP_CSR_EPEDS | UDP_CSR_EPTYPE_CTRL));
}

void USB_SetAddress (U32 adr) {

  UDP->UDP_FADDR = UDP_FADDR_FEN | (adr & UDP_FADDR_FADD); /* set the device address  */
  if (adr) {                                           /* if address is non-zero      */
    UDP->UDP_GLB_STAT |=  UDP_GLB_STAT_FADDEN;         /* device enters address state */
  } else {
    UDP->UDP_GLB_STAT &= ~UDP_GLB_STAT_FADDEN;         /* device enters default state */
  }
}

void USB_Configure (BOOL cfg) {

  if (cfg) {                                           /* if configuration is non-zero   */
    UDP->UDP_GLB_STAT |=  UDP_GLB_STAT_CONFG;          /* device enters configured state */
  } else {
    UDP->UDP_GLB_STAT &= ~UDP_GLB_STAT_CONFG;          /* device clears configured state */
  }
}

void USB_ConfigEP (USB_ENDPOINT_DESCRIPTOR *pEPD) {
  U32 ep, dir, type, csr;

  ep       = pEPD->bEndpointAddress & 0x0F;
  type     = pEPD->bmAttributes     & USB_ENDPOINT_TYPE_MASK;
  dir      = pEPD->bEndpointAddress >> 7;
  csr      = ((type | (dir << 2)) << 8);

  /* check if MaxPacketSize fits for EndPoint */
  if (pEPD->wMaxPacketSize <= USB_GetSizeEP(ep)) {
    USB_SetCSR(ep, csr);                               /* configure the EP */
  }
}

void USB_EnableEP (U32 EPNum) {
  U32 ep;

  ep = EPNum & 0x0F;                                   /* get endpoint number    */
  UDP->UDP_IER = (1 << ep);                            /* enable EP interrupts   */ 
  USB_SetCSR(ep, UDP_CSR_EPEDS);
}

void USB_DisableEP (U32 EPNum) {
  U32 ep;

  ep = EPNum & 0x0F;                                   /* get endpoint number    */
  USB_ClrCSR(ep, UDP_CSR_EPEDS);
  UDP->UDP_IDR = (1 << ep);                            /* disable EP interrupts  */ 
}

void USB_SetStallEP (U32 EPNum) {
  U32 ep;

  ep = EPNum & 0x0F;                                   /* get endpoint number    */
  USB_SetCSR(ep, UDP_CSR_FORCESTALL);
}

void USB_ClrStallEP (U32 EPNum) {
  U32 ep;

  ep = EPNum & 0x0F;                                   /* get endpoint number    */
  USB_ClrCSR(ep, UDP_CSR_FORCESTALL);

  UDP->UDP_RST_EP  |=  (1 << ep);
  UDP->UDP_RST_EP  &= ~(1 << ep);
}

U32 USB_ReadEP (U32 EPNum, U8 *pData) {
  U32 cnt, n;
  U32 ep;

  ep = EPNum & 0x0F;                                   /* get endpoint number    */

  cnt = (UDP->UDP_CSR[ep] >> 16) & 0x07FF;
  for (n = 0; n < cnt; n++) {
    *pData++ = (U8)UDP->UDP_FDR[ep];
  }

  return (cnt);
}

U32 USB_WriteEP (U32 EPNum, U8 *pData, U32 cnt) {
  U32 n;
  U32 ep;

  ep = EPNum & 0x0F;                                   /* get endpoint number    */

  if (UDP->UDP_CSR[ep] & UDP_CSR_FORCESTALL) {         /* do not send if EP is stalled */
    return (cnt);
  }

  if (TxDataBank[ep] != 0) {                           /* bank0 or bank1 ready ? */
    return (0);                                        /* no bank ready */
  }

  if (UDP->UDP_CSR[ep] & UDP_CSR_TXPKTRDY) {           /* bank 0 not ready ? */ 
    if (DualBankEP & (1 << ep)) {                      /* dualbank available ? */
      TxDataBank[ep] = 1;                              /* select bank1 */
    }
    else {
      return (0);                                      /* no bank ready */
    }
  }

  for (n = 0; n < cnt; n++) {
    UDP->UDP_FDR[ep] = *pData++;                       /* write data to fifo */
  }

  if (TxDataBank[ep] == 0) {
    USB_SetCSR(ep, UDP_CSR_TXPKTRDY);
  }

  return (cnt);
}

U32 USB_GetFrame (void) {
  U32 val;

  while ((UDP->UDP_FRM_NUM & (UDP_FRM_NUM_FRM_OK | UDP_FRM_NUM_FRM_ERR)) == 0);
  if (UDP->UDP_FRM_NUM & UDP_FRM_NUM_FRM_OK) {
    val = UDP->UDP_FRM_NUM & UDP_FRM_NUM_FRM_NUM;
  } else {
    val = 0xFFFFFFFF;
  }

  return (val);
}
